--- a/_includes/top.html
+++ b/_includes/top.html
@@ -8,6 +8,6 @@
     <title>Sam J Griffin</title>
     <meta name="description" content="{{ site.description }}" >
 
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="{{site.base_url}}/css/main.css">
     <link rel="alternate" type="application/rss+xml" title="Your awesome title" href="/feed.xml">
   </head>
