fixed url double slash. Updated post page to reflect page properties

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Sam J Griffin</title>
+    <title>Sam J Griffin | {{ page.title }}</title>
     <meta name="description" content="{{ site.description }}" >
 
     <link rel="stylesheet" href="{{site.base_url}}/css/main.css">
