--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,19 @@
 <header class="header">
   <hgroup>
   <h1>
-  <a href="{{site.base_url}}">Sam J Griffin</a>
+  <a href="/">Sam J Griffin</a>
   </h1>
   <h2>
-  <a href="{{site.base_url}}">Full Stack Developer</a>
+  <a href="/">Full Stack Developer</a>
   </h2>
   </hgroup>
   <nav id="primaryNav" class="navigation">
     <ul>
       <li>
-        <a href="{{site.base_url}}">Home</a>
+        <a href="/">Home</a>
       </li>
       <li>
-        <a href="{{site.base_url}}/posts">Blog</a>
+        <a href="/posts">Blog</a>
       </li>
       <li>
         <a href="https://github.com/samjgriffin89">Projects</a>
