--- a/_includes/top.html
+++ b/_includes/top.html
@@ -7,6 +7,7 @@
 
     <title>Sam J Griffin | {{ page.title }}</title>
     <meta name="description" content="{{ site.description }}" >
+    <meta name="google-site-verification" content="{{ site.google_site_verification }}" />
 
     <link rel="stylesheet" href="/css/main.css">
     <link rel="alternate" type="application/rss+xml" title="Your awesome title" href="/feed.xml">
