minor touch ups. added more meta content. first travel post

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
   <a href="/">Sam J Griffin</a>
   </h1>
   <h2>
-  <a href="/">Full Stack Developer</a>
+  <a href="/">Engineer & Kid at Heart</a>
   </h2>
   </hgroup>
   <nav id="primaryNav" class="navigation">
