--- a/_includes/post-top.html
+++ b/_includes/post-top.html
@@ -16,4 +16,12 @@
 
     <link rel="stylesheet" href="/css/main.css">
     <link rel="alternate" type="application/rss+xml" title="Your awesome title" href="/feed.xml">
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-5900554232149700",
+        enable_page_level_ads: true
+      });
+    </script>
   </head>
