--- a/_includes/about-me.html
+++ b/_includes/about-me.html
@@ -1,3 +1,3 @@
-<p>I am a senior .NET engineer currently working at <a href="http://www.cardfree.com">CARDFREE</a> building out RESTful services to supports our mobile and web apps. My focus currently is around scalability, security, and ensuring our solutions are maintainable.</p>
+<p>I am the VP of Engineering at <a href="http://www.cardfree.com">CARDFREE</a> working on building order ahead and contactless payment solutions.</p>
 
 <p>Originally from Boston, but have been living in Denver for several years now. In my spare time I try to keep pace with my energentic golden, hike and ski, and occassionally post something interesting.</p>
