--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,6 +4,9 @@ $borderColor: #eaf0f3;
 $footerColor: #9ba9af;
 $footerBorderColor: #6b757b;
 
+$royalBlue: #273f87;
+$tangerine: #dea450;
+
 .flex-display {
 	display: -webkit-box;
 	display: -moz-box;
