--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,7 +5,7 @@
 @import 'mixins';
 @import 'variables';
 @import 'error';
-@import 'header';
+@import 'navigation-sidebar';
 @import 'footer';
 @import 'page';
 @import 'homepage';
