--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -11,7 +11,7 @@
     }
 
 	a {
-		color: $primaryColor;
+		color: $tangerine;
 	}
 
     img {
@@ -25,7 +25,7 @@
 }
 
 .posts article + article {
-	border-top: 3px solid $primaryColor;
+	border-top: 3px solid $tangerine;
 }
 
 .sidebar {
@@ -63,13 +63,13 @@
 		margin-right: 50px;
 
 		a {
-			color: $primaryColor;
+			color: $tangerine;
 		}
 	}
 }
 
 .post {
-    color: $darkGrey;
+    color: #fff;
     width: 80%;
     margin: 0 auto;
 	padding: 20px;
