--- a/_sass/_normalize.scss
+++ b/_sass/_normalize.scss
@@ -14,7 +14,7 @@
 $legacy_support_for_ie: false !default; // Used also in Compass
 
 // Set the default font family here so you don't have to override it later
-$normalized_font_family: "cooper_hewittbook", "cooper_hewittmedium", Arial !default;
+$normalized_font_family: "Roboto", Arial !default;
 
 $normalize_headings: true !default;
 
@@ -200,7 +200,6 @@ abbr[title] {
 b,
 strong {
     font-weight: bold;
-	font-family: 'cooper_hewittbold';
 }
 
 @if $legacy_support_for_ie {
