--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -1,9 +1,11 @@
-﻿html { 
-  background: url(/images/background.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+﻿html {
+    height: 100%;
+    width: 100%;
+    background: url(/images/background.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 img {
