adjusting my pic

--- a/_includes/navigation-sidebar.html
+++ b/_includes/navigation-sidebar.html
@@ -10,7 +10,7 @@
 			<a class="b-polygon b-polygon_hexagon" href="/">
 				<span class="b-polygon-part">
 					<span class="b-polygon-part b-polygon-part_content">
-						<img src="/images/lexi.jpg" alt="Sam Griffin is his dog" />
+						<img width="400" src="/images/me.jpg" alt="Sam Griffin" />
 					</span>
 				</span>
 			</a>
