--- a/_sass/navigation-sidebar.scss
+++ b/_sass/navigation-sidebar.scss
@@ -5,7 +5,7 @@ nav {
 	margin-top: 1.5rem;
 
 	.nav-wrapper a.btn {
-		margin-left: 0;
+		margin-left: 2rem;
 		background-color: #273f87 !important;
 	}
 
