social icons and font awesoem

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,6 +1,8 @@
 ﻿$disable-responsive: false;
 
 @import 'fonts';
+@import 'font-awesome';
+@import 'materialize-social';
 @import 'normalize';
 @import 'mixins';
 @import 'variables';
