--- a/_includes/navigation-sidebar.html
+++ b/_includes/navigation-sidebar.html
@@ -15,6 +15,25 @@
 				</span>
 			</a>
 		</div>
+		<div class="social-icons center-align">
+			<ul>
+				<li>
+					<a class="waves-effect waves-light social-icon btn linkedin" href="https://www.linkedin.com/in/sam-griffin-89b23014/">
+						<i class="fa fa-linkedin"></i>
+					</a>
+				</li>
+				<li>
+					<a class="waves-effect waves-light social-icon btn twitter" href="https://twitter.com/flannelchannel3">
+						<i class="fa fa-twitter"></i>
+					</a>
+				</li>
+				<li>
+					<a class="waves-effect waves-light social-icon btn instagram" href="https://www.instagram.com/samjgriffin3/">
+						<i class="fa fa-instagram"></i>
+					</a>
+				</li>
+			</ul>
+		</div>
 		<aside class="about-me--content">
 			{% include about-me.html %}
 		</aside>
