--- a/_includes/navigation-sidebar.html
+++ b/_includes/navigation-sidebar.html
@@ -32,6 +32,11 @@
 						<i class="fa fa-instagram"></i>
 					</a>
 				</li>
+				<li>
+					<a class="waves-effect waves-light social-icon btn github" href="https://github.com/samjgriffin89">
+						<i class="fa fa-github"></i>
+					</a>
+				</li>
 			</ul>
 		</div>
 		<aside class="about-me--content">
