--- a/_includes/top.html
+++ b/_includes/top.html
@@ -23,4 +23,5 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/24b5806302.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/js/main.js"></script>
   </head>
