--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -20,6 +20,14 @@ img {
 
 a {
     color: $tangerine;
+
+    &:hover {
+        color: #fff;
+    }
+}
+
+input {
+    color: #9e9e9e;
 }
 
 .main-content {
