--- a/_includes/navigation-sidebar.html
+++ b/_includes/navigation-sidebar.html
@@ -48,7 +48,7 @@
 			<a href="/">Home</a>
 		</li>
 		<li>
-			<a href="/travel">Travel</a>
+			<a href="/foodpics">Food Pics</a>
 		</li>
 		<li>
 			<a href="/dev-posts">Tech & Coding</a>
