--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,6 +2,7 @@
 
 @import 'fonts';
 @import 'font-awesome';
+@import 'materialize';
 @import 'materialize-social';
 @import 'normalize';
 @import 'mixins';
