--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,5 +11,6 @@ layout: compress
 		</section>
 	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	<script async type="text/javascript" src="/js/main.js"></script>
 </body>
 </html>
