adjusting font and side navigation

--- a/_includes/navigation-sidebar.html
+++ b/_includes/navigation-sidebar.html
@@ -7,13 +7,7 @@
 <div id="side-nav" class="sidenav">
 	<section class="about-me">
 		<div class="about-me--img center-align">
-			<a class="b-polygon b-polygon_hexagon">
-				<span class="b-polygon-part">
-					<span class="b-polygon-part b-polygon-part_content">
-						<img width="400" src="/images/me.jpg" alt="Sam Griffin" />
-					</span>
-				</span>
-			</a>
+			<img width="400" src="/images/headshot.jpeg" alt="Sam Griffin" />
 		</div>
 		<div class="social-icons center-align">
 			<ul>
