--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@
 						<h4>{{ page.subtitle }}</h4>
 						{% endif %}
 					</div>
-					<h5>{{ page.date | date: "%B %e, %Y" }}</h5>
+					<h5>{{ page.date | date: "%B %-d, %Y" }}</h5>
 				</hgroup>
 				<p>
 				{{ content }}
