--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -1,4 +1,6 @@
-﻿@font-face {
+﻿@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap');
+
+@font-face {
     font-family: 'staatliches';
     src: url('../fonts/Staatliches-Regular.ttf') format('truetype');
     font-weight: normal;
@@ -10,5 +12,19 @@
     src: url('../fonts/Lobster-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
+}
+
+// Modern font stack
+:root {
+    --font-primary: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+    --font-heading: 'Playfair Display', Georgia, serif;
+    --font-display: 'staatliches', 'Inter', sans-serif;
+}
+
+body {
+    font-family: var(--font-primary);
+    font-weight: 400;
+    line-height: 1.6;
+    letter-spacing: -0.01em;
 }
 
