--- a/_includes/navigation-sidebar.html
+++ b/_includes/navigation-sidebar.html
@@ -7,7 +7,9 @@
 <div id="side-nav" class="sidenav">
 	<section class="about-me">
 		<div class="about-me--img center-align">
-			<img width="400" src="/images/headshot.jpeg" alt="Sam Griffin" />
+			<a href="/">
+				<img width="400" src="/images/headshot.jpeg" alt="Sam Griffin" />
+			</a>
 		</div>
 		<div class="social-icons center-align">
 			<ul>
