--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -3,7 +3,7 @@
 	margin-top: 2rem;
 	
 	h1 {
-		color: $royalBlue;
+		color: $primaryColor;
 		font-family: var(--font-heading);
 		font-size: clamp(3rem, 8vw, 5rem);
 		font-weight: 700;
