--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@ layout: compress
 
 {% include top.html %}
 <body>
-	 {% include navigation-sidebar.html %}
+	 <!-- {% include navigation-sidebar.html %} -->
 	<div class="container">
 		<section class="main-content">
 			{{ content }}
